--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "compression": "^1.7.4",
-    "express": "^4.16.4"
+    "connect-timeout": "^1.9.0",
+    "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1"
   }
 }
