--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "emloxe",
   "license": "ISC",
   "devDependencies": {
+    "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
     "express": "^4.16.4",
-    "http-proxy-middleware": "^0.19.1"
+    "http-proxy-middleware": "^0.19.1",
+    "portfinder": "^1.0.20"
   }
 }
